k8s/apps/deployment.yml
apiVersion: v1
kind: Service
metadata:
  name: go-tracer
  labels:
    app: go-tracer
spec:
  ports:
    - port: 9090
      protocol: TCP
      targetPort: 9000
  selector:
    app: go-tracer
  type: ClusterIP
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: go-tracer
spec:
  replicas: 1
  selector:
    matchLabels:
      app: go-tracer
  template:
    metadata:
      labels:
        app: go-tracer
    spec:
      containers:
        - name: go-tracer
          image: hirokiy/go-tracer
          imagePullPolicy: Always
          ports:
            - containerPort: 9000
          # env:
          #   - name: 'NODE_HOST'
          #     valueFrom:
          #       fieldRef:
          #         apiVersion: v1
          #         fieldPath: status.hostIP
          volumeMounts:
            - mountPath: /workspace/
              name: app-volume
              readOnly: true
      volumes:
        - name: app-volume
          configMap:
            name: go-tracer # name is from name of related configmap
            items:
              - key: settings
                path: settings.toml
