k8s/apps/ing.yml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: go-tracer
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  # backend:
  #   serviceName: jaeger-query
  #   servicePort: 8080
  rules:
    - host: go-tracer.com #hosts setting is required in advance on mac
      http:
        paths:
          - path: /
            backend:
              serviceName: go-tracer
              servicePort: 9090
